# loxi

./: .gitignore  CHANGELOG.md  CLOUDFLARE_PAGES.md  Cargo.toml  Dockerfile.node  LICENSE  Makefile  ORCHESTRATOR.md  QUICKSTART.md  README.md  architecture_evolution_plan.md.resolved  benchmark.html  compose.yml  package-lock.json  package.json  prev_mod.rs  start-dev.sh  test_matrix_node.js
.agent/workflows/: cross-platform-parity.md  feasibility-audit.md  numerical-fidelity.md
.github/workflows/: ci.yml  e2e.yml  publish-sdk.yml
apps/miner/: index.html
apps/mobile-driver/: App.tsx  WasmData.ts  package-lock.json  package.json
apps/visualizer/: dom.js  hot_reload.js  index.html  main.js  map.js  problem.js  quality.js  types.js  ui.js  wasm_loader.js  workers.js
crates/loxi-bench/: Cargo.toml
crates/loxi-bench/benches/: routing_bench.rs
crates/loxi-bench/src/: lib.rs
crates/loxi-cost/: Cargo.toml
crates/loxi-cost/src/: lib.rs
crates/loxi-heuristics/: Cargo.toml
crates/loxi-heuristics/benches/: solver_bench.rs
crates/loxi-heuristics/src/: construction.rs  improvement.rs  lib.rs  solver.rs
crates/loxi-wasm/: Cargo.toml
crates/loxi-wasm/src/: lib.rs
demo/: dom.js  index.html  main.js  map.js  problem.js  solver_worker.js  styles.css  ui.js  utils.js  wasm_loader.js
docs/: AI_IMPLEMENTATION_PLAN.md  AI_RESEARCH.md  FLOW_CLIENT_OWNER_NOTIFICATIONS.md  PLANNED_IMPROVEMENTS.md  WHITE_PAPER.md  loxi_l2_whitepaper.md
examples/: buenos_aires_25stops.json  buenos_aires_60stops.json  simple_3stop.json
protocol/: .env  .loxi_data.json  Cargo.toml  artifacts  simulate_full_flow.js
protocol/crates/ai/loxi-ai/: Cargo.toml
protocol/crates/ai/loxi-ai/src/: lib.rs
protocol/crates/ai/loxi-ai/src/engine/: candle_engine.rs  mod.rs  webnn_engine.rs
protocol/crates/ai/loxi-ai/src/shard_manager/: downloader.rs  manager.rs  mod.rs  session.rs  tests.rs
protocol/crates/logistics/loxi-logistics/: Cargo.toml
protocol/crates/logistics/loxi-logistics/data/valhalla_tiles/: valhalla.json
protocol/crates/logistics/loxi-logistics/scripts/: generate_tiles.sh
protocol/crates/logistics/loxi-logistics/src/: allocator.rs  lib.rs  server.rs  types.rs
protocol/crates/logistics/loxi-logistics/src/architect/: auction.rs  core.rs  mod.rs  partitioner.rs
protocol/crates/logistics/loxi-logistics/src/architect/storage/: blind_relay.rs  mod.rs
protocol/crates/logistics/loxi-logistics/src/engines/: mod.rs  partitioner.rs
protocol/crates/logistics/loxi-logistics/src/engines/matrix/: mod.rs  valhalla_sys.rs
protocol/crates/logistics/loxi-logistics/src/engines/vrp/: En la logística de alta densidad, la opt.md  mod.rs
protocol/crates/logistics/loxi-matrix/: Cargo.toml  build.rs
protocol/crates/logistics/loxi-matrix/engine/: Dockerfile  build_libs.sh  build_wasm.sh  rebuild_standalone.sh
protocol/crates/logistics/loxi-matrix/engine/src/: ValhallaResourceManager.js  binding.cpp  js_library.js  valhalla_engine.js
protocol/crates/logistics/loxi-matrix/src/: lib.rs
protocol/crates/logistics/loxi-partitioner/: Cargo.toml
protocol/crates/logistics/loxi-partitioner/src/: lib.rs
protocol/crates/logistics/loxi-vrp/: Cargo.toml
protocol/crates/logistics/loxi-vrp/src/: lib.rs
protocol/crates/logistics/loxi-worker-pkg/templates/: matrix_worker.js  partitioner_worker.js  solution_visualizer_worker.js  vrp_worker.js
protocol/crates/loxi-architect-sdk/: Cargo.toml
protocol/crates/loxi-architect-sdk/src/: lib.rs
protocol/crates/loxi-cli/: Cargo.toml
protocol/crates/loxi-cli/src/: main.rs
protocol/crates/loxi-compute/: Cargo.toml
protocol/crates/loxi-compute/src/: lib.rs
protocol/crates/loxi-core/: Cargo.toml  serialization_test.rs
protocol/crates/loxi-core/src/: lib.rs
protocol/crates/loxi-logistics/: .env  .loxi_data.json  Cargo.toml  build.rs  serve_tiles.sh
protocol/crates/loxi-logistics/artifacts/matrix/: Cargo.toml  loxi_valhalla.js
protocol/crates/loxi-logistics/artifacts/matrix/src/: lib.rs
protocol/crates/loxi-logistics/artifacts/partitioner/: Cargo.toml
protocol/crates/loxi-logistics/artifacts/partitioner/src/: lib.rs
protocol/crates/loxi-logistics/artifacts/sector/: Cargo.toml
protocol/crates/loxi-logistics/artifacts/sector/src/: lib.rs
protocol/crates/loxi-logistics/artifacts/vrp/: Cargo.toml
protocol/crates/loxi-logistics/artifacts/vrp/src/: lib.rs
protocol/crates/loxi-logistics/src/: lib.rs
protocol/crates/loxi-logistics/src/engines/: partitioner.rs
protocol/crates/loxi-logistics/src/engines/matrix/: downloader.rs  lazy_fs.rs  mod.rs  valhalla_sys.rs
protocol/crates/loxi-logistics/src/engines/vrp/: mod.rs
protocol/crates/loxi-logistics/src/manager/: auction.rs  core.rs  mod.rs  partitioner.rs  types.rs
protocol/crates/loxi-logistics/valhalla_tiles/: valhalla.json
protocol/crates/loxi-orchestrator/: .env.example  Cargo.toml  dev_private.pem
protocol/crates/loxi-orchestrator/src/: auction.rs  auth.rs  lib.rs  main.rs  scheduler.rs  store.rs
protocol/crates/loxi-types/: Cargo.toml
protocol/crates/loxi-types/src/: lib.rs  problem.rs  solution.rs
protocol/crates/loxi-wasm-sdk/: Cargo.toml
protocol/crates/loxi-wasm-sdk/src/: lib.rs
protocol/crates/net/loxi-asset-manager/: Cargo.toml
protocol/crates/net/loxi-asset-manager/src/: lib.rs  opfs.rs
protocol/crates/net/loxi-net-core/: Cargo.toml
protocol/crates/net/loxi-net-core/src/: lib.rs
protocol/crates/net/loxi-net-wasm/: Cargo.toml
protocol/crates/net/loxi-net-wasm/src/: lib.rs
scripts/: abi_test.cpp  bench.sh  build_artifacts.sh  build_pages.sh  compile_bridge.sh  convert_osm_to_valhalla.sh  convert_osm_to_valhalla_docker.sh  download_tiles.sh  extract_wasm_libs.sh  generate_benchmark.js  inspect_wasm_imports.js  rebuild_tiles_docker.sh  run_node.sh  serve_tiles.sh  setup_valhalla_tiles.sh  simulate_architect_flow.js  simulate_auction_flow.js  simulate_full_flow.js  simulate_tiered_scheduler.js  simulate_unified_flow.js  simulate_worker_renting_flow.js  test.sh  test_unified_wasm32.js  verify_matrix_worker.js  verify_wasm32_pkg.js
(+78 files in other folders)
