[workspace]
resolver = "2"
members = [
    "crates/loxi-core",
    "crates/loxi-types",
    "crates/loxi-architect-sdk",
    "crates/loxi-orchestrator",
    "crates/loxi-cli",
    "crates/loxi-wasm-sdk",
    "crates/logistics/loxi-logistics",
    "crates/logistics/loxi-vrp",
    "crates/logistics/loxi-matrix",
    "crates/logistics/loxi-partitioner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Loxi Contributors"]
repository = "https://github.com/goingprotocol/loxi"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"
vrp-core = { version = "1.25.0", default-features = false }
vrp-pragmatic = { version = "1.25.0", default-features = false }

wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen-test = "0.3"

clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

criterion = { version = "0.5", features = ["html_reports"] }

approx = "0.5"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"

