[package]
name = "loxi-cost"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cost functions and penalty models for Loxi"

[dependencies]
loxi-types = { path = "../loxi-types" }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

