[package]
name = "loxi-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "WASM bindings for Loxi browser integration"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
loxi-types = { path = "../loxi-types" }
loxi-heuristics = { path = "../loxi-heuristics" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

