[package]
name = "loxi-architect-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
loxi-core = { path = "../loxi-core" }
loxi-types = { path = "../loxi-types" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
# Any domain specific dependencies will be injected via traits
