[package]
name = "loxi-architect-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Client SDK for building Loxi architect nodes — connects to the orchestrator and dispatches routing tasks"

[dependencies]
loxi-core = { path = "../loxi-core", version = "0.1.0" }
loxi-types = { path = "../loxi-types", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
jsonwebtoken = { version = "10.3.0", features = ["use_pem", "rust_crypto"] }
dashmap = "6.0"
# Any domain specific dependencies will be injected via traits
