[package]
name = "loxi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for Loxi routing solver"

[[bin]]
name = "loxi"
path = "src/main.rs"

[dependencies]
loxi-types = { path = "../loxi-types" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

