[package]
name = "loxi-compute"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rayon = "1.7"
wasm-bindgen-rayon = "1.0"
web-sys = { version = "0.3", features = ["console"] }

# For random number generation if needed
rand = { version = "0.8", features = ["small_rng"] }
console_error_panic_hook = "0.1.7"
