[package]
name = "loxi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Core node-selection and worker-pool primitives for the Loxi distributed routing network"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
serde_json = { workspace = true }
