[package]
name = "loxi-logistics"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
loxi-core = { path = "../loxi-core" }
loxi-types = { path = "../loxi-types" }
vrp-pragmatic = { version = "1.18", default-features = false } # Core solver
h3o = "0.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] } # Essential for Rand + WASM
reqwest = { version = "0.11", features = ["json"] }
loxi-wasm-sdk = { path = "../loxi-wasm-sdk" }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2.5"
warp = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
