[package]
name = "loxi-logistics"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
include_wasm = []

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
serde_json = "1.0"
loxi-core = { path = "../loxi-core" }
loxi-types = { path = "../loxi-types" }
vrp-pragmatic = { version = "1.18", default-features = false } # Core solver
h3o = "0.3"
rand = "0.8"
lazy_static = "1.4"
lru = "0.12"
getrandom = { version = "0.2", features = ["js"] } # Essential for Rand + WASM
loxi-wasm-sdk = { path = "../loxi-wasm-sdk" }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2.5"
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
cc = "1.0"
