[package]
name = "loxi-wasm-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
console_error_panic_hook = "0.1"
js-sys = "0.3"
