[package]
name = "loxi-ai"
version = "0.1.0"
edition = "2021"
authors = ["Loxi Protocol Authors"]
description = "Core AI Inference engine for the Loxi Distributed Network"

[dependencies]
# Deep Learning Core
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }

# Serialization & Communication
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
async-trait = "0.1"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"

# Internal SDKs (when needed)
# loxi-wasm-sdk = { path = "../../sdk/wasm" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "test-util"] }

[features]
default = []
# Candle no tiene features 'wasm' o 'wgpu' explícitas en el core, 
# se manejan via target o backends externos.
