[package]
name = "loxi-asset-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
loxi-net-core = { path = "../loxi-net-core" }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "StorageManager",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "FileSystemWritableFileStream",
  "FileSystemSyncAccessHandle",
  "FileSystemGetDirectoryOptions",
  "FileSystemGetFileOptions",
  "File",
  "Blob",
  "Window",
  "Navigator",
  "Response",
  "console",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
  "BinaryType",
  "Worker"
]
