[package]
name = "loxi-net-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
loxi-net-core = { path = "../loxi-net-core" }
wasm-bindgen = { workspace = true }
js-sys = "0.3"
bincode = "1.3.3"
async-trait = "0.1.89"

[dependencies.web-sys]
version = "0.3"
features = [
  "RtcPeerConnection",
  "RtcDataChannel",
  "RtcDataChannelInit",
  "RtcDataChannelType",
  "RtcDataChannelState",
  "MessageEvent",
  "console"
]
