[package]
name = "loxi-valhalla-artifact"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"  # ADDED for direct object transfer
console_error_panic_hook = "0.1"
loxi-wasm-sdk = { path = "../../../loxi-wasm-sdk" }
loxi-logistics = { path = "../.." }

# Optimization profile for smaller binaries
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
