[package]
name = "loxi-vrp-artifact"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
loxi-types = { path = "../../../loxi-types" }
vrp-core = "1.25.0"
vrp-pragmatic = "1.25.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
loxi-wasm-sdk = { path = "../../../loxi-wasm-sdk" }
